Fix" other activities "vertical alignment

--- a/classroom/assets/css/main.css
+++ b/classroom/assets/css/main.css
@@ -1205,7 +1205,7 @@ img.btn-cabri {
 
     border-radius: 1em;
     padding: 0.1em 0;
-    margin: 1em;   
+    margin: 1em;
 }
 
 #classroom-dashboard-activities-panel .section-header {
@@ -1433,8 +1433,9 @@ h3.section-done {
 .activity-creation-form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    flex-wrap: nowrap;
 }
 
 
@@ -2418,6 +2419,7 @@ i.line_height34 {
     width: 100%;
     height: 100%;
     margin: 0;
+
 }
 
 .form-container {
@@ -2509,7 +2511,7 @@ i.line_height34 {
 
 #tools-selector {
     width: 90%;
-    height: 60%;
+    height: 85%;
     max-width: 100%;
     max-height: 100%;
     margin-top: 2vh;
@@ -2630,7 +2632,8 @@ i.line_height34 {
   justify-content: center;
   width: auto;
   align-items: center;
-  border: 2px solid #41729C;
+  /*border: 2px solid #41729C;*/
+  border: 3px solid #F0F0F0;
   border-radius: 40px 40px 40px 40px;
   padding: 30px 50px 10px 50px;
   margin-top: 30px;
